logs/Slang/generic/class/class_test_48.sv.log
name: class_test_48
description: Test
should_fail: 0
tags: 6.15 8.3
files: /home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_48.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_48.sv:7:1: error: language feature not yet supported
class pp_as_class_item;
^~~~~~~~~~~~~~~~~~~~~~~
